# Course_player

./: Check.cpp  Check.h  DecodeError.cpp  DecodeError.h  Errors.h  Graphics_funcs.cpp  Graphics_funcs.h  Makefile.win  OpenFile.cpp  OpenFile.h  README.md  ReadSceneNum.cpp  ReadSceneNum.h  Scene.cpp  Scene.h  file_struct.txt  main.cpp  shapes.h
Linux/: README.txt  file_struct.txt
Linux/converter/: a.out  circle.txt  converter.c  mouvie.txt  sound.txt
Linux/project/: CMakeLists.txt  all_test.film  sound.film
Linux/project/executable/: Check.c  DecodeError.c  Graphics.c  OpenFile.c  ReadSceneNum.c  Scene.c  Sound.c  main.c
Linux/project/headers/: Check.h  DecodeError.h  Graphics.h  OpenFile.h  ReadSceneNum.h  Scene.h  Sound.h
converter/: a.out  circle.txt  converter.cpp  first_film.txt  out.film
